Use digitelQpc.proto

--- a/digitelQpcApp/Db/digitelQPCController.template
+++ b/digitelQpcApp/Db/digitelQPCController.template
@@ -9,7 +9,7 @@ record(stringin, "$(QPC):MODEL")
 	field(DESC, "Reads Device Model")
 	field(PINI, "YES")
 	field(DTYP, "stream")
-	field(INP, "@vacuum-gamma-qpc.proto getModel($(unit=01)) $(port)")
+	field(INP, "@digitelQpc.proto getModel($(unit=01)) $(port)")
     }
 
 record(stringin, "$(QPC):FIRMWARE")
@@ -17,7 +17,7 @@ record(stringin, "$(QPC):FIRMWARE")
 	field(DESC, "Reads Device Firmware")
 	field(PINI, "YES")
 	field(DTYP, "stream")
-	field(INP, "@vacuum-gamma-qpc.proto getFirmware($(unit=01)) $(port)")
+	field(INP, "@digitelQpc.proto getFirmware($(unit=01)) $(port)")
     }
 
 record(mbbo,"$(QPC):SETPUNITS")
@@ -25,7 +25,7 @@ record(mbbo,"$(QPC):SETPUNITS")
 	field(DESC,"Set Pressure Units controller")
 	field(NOBT,"2")
  	field(DTYP, "stream")
-	field(OUT,"@vacuum-gamma-qpc.proto setPressUnit($(unit=01)) $(port)")
+	field(OUT,"@digitelQpc.proto setPressUnit($(unit=01)) $(port)")
 	field(ZRVL,"0")
 	field(ONVL,"1")
 	field(TWVL,"2")
@@ -41,7 +41,7 @@ record(mbbi,"$(QPC):PUNITS")
  	field(DTYP, "stream")
     field(SCAN, "Passive")
     field(PINI, "YES")
-	field(INP,"@vacuum-gamma-qpc.proto getPressureUnit($(unit=01)) $(port)")
+	field(INP,"@digitelQpc.proto getPressureUnit($(unit=01)) $(port)")
 #    field(INP, "$(SYSTEM)$(PMP):SETPUNITS.VAL CP NMS")
 	field(ZRVL,"0")
 	field(ONVL,"1")
