igitelQpcIonp.template, digitelQpcIonpControl.edl, digitelQpc.proto  working gin harmony to facilitate control of the QPC

--- a/digitelQpcApp/Db/digitelQpcIonp.template
+++ b/digitelQpcApp/Db/digitelQpcIonp.template
@@ -9,6 +9,7 @@
 #% macro, unit, unit number for multi-drop serial (2 hex digits - 05 by default)
 #% macro, pump, ion pump number (1, 2, 3, 4)
 #% macro, size, pump size (l/s)
+#% macro, hv,   default HV setting
 #% macro, spon, setpoint on
 #% macro, spoff, setpoint off
 #% macro, display, label on controller screen
@@ -127,6 +128,17 @@ record(ao, "$(device):SETCAL") {
 }
 
 
+record(ai, "$(device):GETV") {
+    field(DESC, "Get Target Voltage")
+    field(DTYP, "stream")
+	field(PINI, "YES")
+    field(INP,  "@digitelQpc.proto getVoltageSetpoint($(unit=01),$(SPLY)) $(port)")
+	field(SCAN, "1 second")
+    field(LOPR, "3000")
+    field(HOPR, "7000")
+    field(PREC, "0")
+}
+
 ################################################################################
 # Set target output voltage
 # SPLY - Supply (1-4)
@@ -140,6 +152,8 @@ record(ao, "$(device):SETV") {
     field(DESC, "Set target voltage")
     field(DTYP, "stream")
     field(OUT,  "@digitelQpc.proto setVoltage($(unit=01),$(SPLY)) $(port)")
+    field(PINI, "YES")
+    field(DOL,  "$(HV=3000)")
     field(DRVL, "3000")
     field(DRVH, "7000")
     field(LOPR, "3000")
@@ -197,7 +211,7 @@ record(ai, "$(device):P")
 record(ai, "$(device):V")
 {
 	field(DESC, "Reads Supply Voltage")
-	field(SCAN, "5 second")
+	field(SCAN, "1 second")
 #	field(PINI, "YES")
     field(PREC, "0")
 	field(DTYP, "stream")
@@ -253,9 +267,9 @@ record(mbbi, "$(device):STA")
     field(FFST, "Invalid")
     field(UNSV, "MAJOR")
     field(ZRSV, "MAJOR")
-    field(ONSV, "MAJOR")
-    field(TWSV, "MAJOR")
-    field(THSV, "MAJOR")
+    field(ONSV, "MINOR")
+    field(TWSV, "NO_ALARM")
+    field(THSV, "MINOR")
     field(FRSV, "NO_ALARM")
     field(FVSV, "MINOR")
     field(SXSV, "MAJOR")
@@ -378,7 +392,8 @@ record(ai, "$(device):SPOFF")
 record(bi, "$(device):SPSTA")
     {
 	field(DESC, "Protection Relay status for pump")
-	field(OSV, "MAJOR")
+	field(OSV, "NO_ALARM")
+	field(ZSV, "MAJOR")
 	field(ZNAM, "Off")
 	field(ONAM, "On")
     }
@@ -412,6 +427,7 @@ record(ai, "$(device):SETSPON")
 	field(DTYP, "Soft Channel")
 	field(HOPR,"1.0E-4")
 	field(LOPR,"1.0e-11")
+	field(VAL,"$(spon)")
     field(PREC,"1")
     field(FLNK,"$(device):WRITEENABLE.PROC PP NMS")
     }
@@ -422,6 +438,7 @@ record(ai, "$(device):SETSPOFF")
 	field(DTYP, "Soft Channel")
 	field(HOPR,"1.0E-4")
 	field(LOPR,"1.0e-11")
+	field(VAL,"$(spoff)")
     field(PREC,"1")
     field(FLNK,"$(device):WRITEENABLE.PROC PP NMS")
     }
@@ -453,11 +470,17 @@ record(calcout,"$(device):WRITEENABLE")
 # IG - rationalise setpoint writing into a single operation
 # ~ 01 3B <N>,<F>,<S>,<SPON>,<SPOFF>
 #
+# PINI is set to YES to force the initial startup values from the IOC to be
+# set on IOC boot.
+# Should it be required in future to set the setpoint target to the value currently
+# in the controller, then PINI should be set to NO.
+#
 record(calcout,"$(device):WRITESP")
     {
     field(DESC,"Write On/Off Setpoints")
 	field(DTYP, "stream")
     field(CALC,"0")
+    field(PINI, "YES")
     field(INPA,"$(SPT)")
     field(INPB,"$(SPLY)")
     field(INPC,"$(device):SETSPON.VAL NPP NMS")
