replace configure/ and update Makefiles

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
-O.linux-x86_64
-O.vxWorks-ppc604_long
+O.*/
 data
-db
-runcss.sh
+/bin/
+/db/
+/dbd/
+doxygen
+/iocs/example
+/lib/
 *~
-
+/configure/*.local
