--- a/digitelQpcApp/protocol/Makefile
+++ b/digitelQpcApp/protocol/Makefile
@@ -1,11 +1,12 @@
 TOP = ../..
-ifdef EPICS_HOST_ARCH
 include $(TOP)/configure/CONFIG
 #----------------------------------------
 #  ADD MACRO DEFINITIONS AFTER THIS LINE
 
+# overrides from configure/CONFIG_COMMON in Base
+INSTALL_DB = $(INSTALL_LOCATION)/protocol
+
 # Copy all protocol files into data directory
-DATA += $(patsubst ../%, %, $(wildcard ../*.proto))
+DB += $(patsubst ../%, %, $(wildcard ../*.proto))
 
 include $(TOP)/configure/RULES
-endif
