Selectable .proto file

--- a/digitelQpcApp/Db/digitelQPCController.template
+++ b/digitelQpcApp/Db/digitelQPCController.template
@@ -8,7 +8,7 @@ record(stringin, "$(QPC):MODEL")
 	field(DESC, "Reads Device Model")
 	field(PINI, "YES")
 	field(DTYP, "stream")
-	field(INP, "@digitelQpc.proto getModel($(unit=01)) $(port)")
+	field(INP, "@digitelQpc$(QPCBUS=).proto getModel($(unit=01)) $(port)")
     }
 
 record(stringin, "$(QPC):FIRMWARE")
@@ -16,7 +16,7 @@ record(stringin, "$(QPC):FIRMWARE")
 	field(DESC, "Reads Device Firmware")
 	field(PINI, "YES")
 	field(DTYP, "stream")
-	field(INP, "@digitelQpc.proto getFirmware($(unit=01)) $(port)")
+	field(INP, "@digitelQpc$(QPCBUS=).proto getFirmware($(unit=01)) $(port)")
     }
 
 record(mbbo,"$(QPC):SETPUNITS")
@@ -24,7 +24,7 @@ record(mbbo,"$(QPC):SETPUNITS")
 	field(DESC,"Set Pressure Units controller")
 	field(NOBT,"2")
  	field(DTYP, "stream")
-	field(OUT,"@digitelQpc.proto setPressUnit($(unit=01)) $(port)")
+	field(OUT,"@digitelQpc$(QPCBUS=).proto setPressUnit($(unit=01)) $(port)")
 	field(ZRVL,"0")
 	field(ONVL,"1")
 	field(TWVL,"2")
@@ -40,7 +40,7 @@ record(mbbi,"$(QPC):PUNITS")
  	field(DTYP, "stream")
     field(SCAN, "Passive")
     field(PINI, "YES")
-	field(INP,"@digitelQpc.proto getPressureUnit($(unit=01)) $(port)")
+	field(INP,"@digitelQpc$(QPCBUS=).proto getPressureUnit($(unit=01)) $(port)")
 	field(ZRVL,"0")
 	field(ONVL,"1")
 	field(TWVL,"2")
