--- a/digitelQpcApp/Db/digitelQpcIonp.template
+++ b/digitelQpcApp/Db/digitelQpcIonp.template
@@ -54,7 +54,7 @@ record(stringout, "$(device):SETTEXT")
     field(DESC, "Text String")
     field(VAL , "$(text=$(device))")
     field(DTYP, "stream")
-    field(OUT,  "@digitelQpc.proto settext($(unit),$(SPLY),$(device)) $(port)")
+    field(OUT,  "@digitelQpc$(QPCBUS=).proto settext($(unit),$(SPLY),$(device)) $(port)")
     field(PINI, "YES")
     }
 
@@ -65,7 +65,7 @@ record(bo, "$(device):SETAUTOST")
 {
     field(DESC, "Auto Restart")
     field(DTYP, "stream")
-    field(OUT,  "@digitelQpc.proto setautost($(unit=01),$(SPLY),$(device)) $(port)")
+    field(OUT,  "@digitelQpc$(QPCBUS=).proto setautost($(unit=01),$(SPLY),$(device)) $(port)")
     field(ZNAM, "No")
     field(ONAM, "Yes")
     field(DOL,  "0")
@@ -79,7 +79,7 @@ record(bi, "$(device):AUTOST")
 {
     field(DESC, "Auto Restart")
     field(DTYP, "stream")
-    field(INP,  "@digitelQpc.proto autost($(unit=01),$(SPLY)) $(port)")
+    field(INP,  "@digitelQpc$(QPCBUS=).proto autost($(unit=01),$(SPLY)) $(port)")
 	field(SCAN, "10 second")
     field(PINI, "YES")
     field(ZNAM, "No")
@@ -96,7 +96,7 @@ record(ai, "$(device):CAL") {
     field(DESC, "Calibration Factor")
     field(DTYP, "stream")
 	field(PINI, "YES")
-    field(INP,  "@digitelQpc.proto getcal($(unit=01),$(SPLY)) $(port)")
+    field(INP,  "@digitelQpc$(QPCBUS=).proto getcal($(unit=01),$(SPLY)) $(port)")
 	field(SCAN, "10 second")
     field(LOPR, "0.0")
     field(HOPR, "9.99")
@@ -109,7 +109,7 @@ record(ai, "$(device):CAL") {
 record(ao, "$(device):SETCAL") {
     field(DESC, "Calibration Factor")
     field(DTYP, "stream")
-    field(OUT,  "@digitelQpc.proto setcal($(unit=01),$(SPLY)) $(port)")
+    field(OUT,  "@digitelQpc$(QPCBUS=).proto setcal($(unit=01),$(SPLY)) $(port)")
     field(DRVL, "0.0")
     field(DRVH, "9.99")
     field(LOPR, "0.0")
@@ -123,7 +123,7 @@ record(ai, "$(device):GETV") {
     field(DESC, "Get Target Voltage")
     field(DTYP, "stream")
 	field(PINI, "YES")
-    field(INP,  "@digitelQpc.proto getVoltageSetpoint($(unit=01),$(SPLY)) $(port)")
+    field(INP,  "@digitelQpc$(QPCBUS=).proto getVoltageSetpoint($(unit=01),$(SPLY)) $(port)")
 	field(SCAN, "1 second")
     field(LOPR, "3000")
     field(HOPR, "7000")
@@ -156,7 +156,7 @@ record(calcout, "$(device):ISON")
 record(ao, "$(device):SETV") {
     field(DESC, "Set target voltage")
     field(DTYP, "stream")
-    field(OUT,  "@digitelQpc.proto setVoltage($(unit=01),$(SPLY)) $(port)")
+    field(OUT,  "@digitelQpc$(QPCBUS=).proto setVoltage($(unit=01),$(SPLY)) $(port)")
     field(PINI, "YES")
     field(DOL,  "$(HV=3000)")
     field(DRVL, "3000")
@@ -174,7 +174,7 @@ record(bo, "$(device):SETHV")
 {
     field(DESC, "HV On / Off")
     field(DTYP, "stream")
-    field(OUT,  "@digitelQpc.proto sethv($(unit=01),$(SPLY),$(device)) $(port)")
+    field(OUT,  "@digitelQpc$(QPCBUS=).proto sethv($(unit=01),$(SPLY),$(device)) $(port)")
     field(ZNAM, "Stop")
     field(ONAM, "Start")
     field(DOL,  "$(device):ISON PP")
@@ -201,7 +201,7 @@ record(ai, "$(device):I")
 	field(SCAN, "5 second")
 #	field(PINI, "YES")
 	field(DTYP, "stream")
-	field(INP, "@digitelQpc.proto getCurrent($(unit=01),$(SPLY)) $(port)")
+	field(INP, "@digitelQpc$(QPCBUS=).proto getCurrent($(unit=01),$(SPLY)) $(port)")
 }
 
 record(ai, "$(device):P")
@@ -210,7 +210,7 @@ record(ai, "$(device):P")
 	field(SCAN, "5 second")
 #	field(PINI, "YES")
 	field(DTYP, "stream")
-	field(INP, "@digitelQpc.proto getPressure($(unit=01),$(SPLY)) $(port)")
+	field(INP, "@digitelQpc$(QPCBUS=).proto getPressure($(unit=01),$(SPLY)) $(port)")
 }
 
 record(ai, "$(device):V")
@@ -220,7 +220,7 @@ record(ai, "$(device):V")
 #	field(PINI, "YES")
     field(PREC, "0")
 	field(DTYP, "stream")
-	field(INP, "@digitelQpc.proto getVoltage($(unit=01),$(SPLY)) $(port)")
+	field(INP, "@digitelQpc$(QPCBUS=).proto getVoltage($(unit=01),$(SPLY)) $(port)")
 }
 
 record(stringin, "$(device):SCAN")
@@ -252,7 +252,7 @@ record(mbbi, "$(device):QPCSTA")
 {
     field(DESC, "Supply Status")
     field(DTYP, "stream")
-	field(INP, "@digitelQpc.proto getStatus($(unit=01),$(SPLY),$(device):STATUSERRMSG) $(port)")
+	field(INP, "@digitelQpc$(QPCBUS=).proto getStatus($(unit=01),$(SPLY),$(device):STATUSERRMSG) $(port)")
     field(SCAN, "5 second")
     field(ZRST, "Standby")
     field(ONST, "Starting")
@@ -372,7 +372,7 @@ record(bo, "$(device):ENABLE")
 	field(PINI, "NO")
 	field(VAL, "1")
 	field(DTYP, "stream")
-	field(OUT, "@digitelQpc.proto sethv($(unit=01),$(SPLY),$(device)) $(port)")
+	field(OUT, "@digitelQpc$(QPCBUS=).proto sethv($(unit=01),$(SPLY),$(device)) $(port)")
 }
 
 record(bo, "$(device):DISABLE")
@@ -381,7 +381,7 @@ record(bo, "$(device):DISABLE")
 	field(PINI, "NO")
 	field(VAL, "0")
 	field(DTYP, "stream")
-	field(OUT, "@digitelQpc.proto sethv($(unit=01),$(SPLY),$(device)) $(port)")
+	field(OUT, "@digitelQpc$(QPCBUS=).proto sethv($(unit=01),$(SPLY),$(device)) $(port)")
 }
 
 ###################################################################
@@ -392,7 +392,7 @@ record(ai, "$(device):PUMPSIZE")
 	field(PINI, "YES")
 	field(SCAN, "10 second")
 	field(DTYP, "stream")
-	field(INP, "@digitelQpc.proto getPumpSize($(unit=01),$(SPLY)) $(port)")
+	field(INP, "@digitelQpc$(QPCBUS=).proto getPumpSize($(unit=01),$(SPLY)) $(port)")
 	field(EGU,"L/S")
     }
 record(ao, "$(device):SETPUMPSIZE") {
@@ -400,7 +400,7 @@ record(ao, "$(device):SETPUMPSIZE") {
 	field(DTYP, "stream")
 	field(PINI, "YES")
 	field(DOL, "$(SIZE=500)")
-	field(OUT, "@digitelQpc.proto setPumpSize($(unit=01),$(SPLY)) $(port)")
+	field(OUT, "@digitelQpc$(QPCBUS=).proto setPumpSize($(unit=01),$(SPLY)) $(port)")
 	field(OMSL, "supervisory")
 	field(EGU,"L/S")
 	field(DRVH,"1200")
@@ -422,7 +422,7 @@ record(ai, "$(device):GETSP")
 	field(PINI, "YES")
 	field(SCAN, "5 second")
 	field(DTYP, "stream")
-	field(INP, "@digitelQpc.proto getSetpoints($(unit=01),$(SPLY),$(device)) $(port)")
+	field(INP, "@digitelQpc$(QPCBUS=).proto getSetpoints($(unit=01),$(SPLY),$(device)) $(port)")
     field(PREC,"1")
     }
 
@@ -546,7 +546,7 @@ record(calcout,"$(device):WRITESP")
     field(INPB,"$(SPLY)")
     field(INPC,"$(device):SETSPON.VAL NPP NMS")
     field(INPD,"$(device):SETSPOFF.VAL NPP NMS")
-    field(OUT,"@digitelQpc.proto setSetpoints($(unit=01),$(device)) $(port)")
+    field(OUT,"@digitelQpc$(QPCBUS=).proto setSetpoints($(unit=01),$(device)) $(port)")
     }
 
 record(stringin, "$(device):SPOFFMESSAGE")
@@ -591,7 +591,7 @@ record(longin, "$(device):ERRGET")
 {
     field(DESC, "Get Error Code")
     field(DTYP, "stream")
-    field(INP,  "@digitelQpc.proto err($(unit),$(SPLY)) $(port)")
+    field(INP,  "@digitelQpc$(QPCBUS=).proto err($(unit),$(SPLY)) $(port)")
     field(SCAN, "Passive")
 }
 
